style: fix issues on dark mode.

--- a/src/ui/style/antd-overwrite.less
+++ b/src/ui/style/antd-overwrite.less
@@ -103,6 +103,11 @@
 .ant-modal-mask {
   background-color: rgba(0, 0, 0, 0.15);
 }
+html.dark, body.dark {
+  .ant-modal-mask {
+    background-color: rgba(0, 0, 0, 0.45);
+  }
+}
 .ant-modal-header,
 .ant-modal-content,
 .ant-modal-content {
