--- a/src/ui/views/Receive/style.less
+++ b/src/ui/views/Receive/style.less
@@ -10,6 +10,7 @@
       padding: 0;
     }
     .ant-modal-confirm-content {
+      background: var(--r-neutral-bg1);
       margin: 0;
       padding: 40px 24px 32px;
 
@@ -139,7 +140,7 @@
 
     &-img {
       padding: 12px;
-      border: 1px solid #d8dfeb;
+      border: 1px solid var(--r-neutral-line);
       border-radius: 10px;
       width: 200px;
       margin-left: auto;
